[package]
name = "nucc-player-color-param-asbr"
version = "0.1.0"
authors = ["Kojo Bailey"]
description = "Binary-encoded de/serialiser for the PlayerColorParam data structure used in JoJo's Bizarre Adventure: All-Star Battle R."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
byteorder = { workspace = true }
indexmap = { workspace = true }

[dependencies.player-color-param]
git = "https://github.com/KojoBailey/nucc-binary-lib-rs.git"
package = "nucc-player-color-param"

